--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ddm (2.2.9) debian; urgency=low
+
+  * Updated Broadcom hardware list
+
+ -- Arjen Balfoort <arjenbalfoort@solydxk.com>  Wed, 13 Jul 2016 07:11:00 +0200
+
 ddm (2.2.8) debian; urgency=low
 
   * Handle --force-yes in /usr/bin/ddm for Stretch
