--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+ddm (2.3.1) debian; urgency=low
+
+  * updated translations
+
+ -- Arjen Balfoort <arjenbalfoort@solydxk.com>  Tue, 03 Jan 2017 16:02:41 +0100
+
+ddm (2.3.0) debian; urgency=low
+
+  * Added Lithuanian language
+
+ -- Arjen Balfoort <arjenbalfoort@solydxk.com>  Wed, 27 Jul 2016 10:05:45 +0200
+
 ddm (2.2.9) debian; urgency=low
 
   * Updated Broadcom hardware list
