Updated translation files

--- a/po/pot/help.pot
+++ b/po/pot/help.pot
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-03-06 21:07+0200\n"
+"POT-Creation-Date: 2017-04-01 18:43+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -113,7 +113,7 @@ msgid "This will try to fix a Bumblebee install."
 msgstr ""
 
 #: en/help.html+html.body.div.h2:39
-msgid "Log"
+msgid "Logging"
 msgstr ""
 
 #: en/help.html+html.body.div.h3:40
